--- a/sixman/src/main/webapp/resources/css/admin/member/join.css
+++ b/sixman/src/main/webapp/resources/css/admin/member/join.css
@@ -247,18 +247,28 @@
 .title > input {
     display: none;
 }
-.addfile,
-#file-info {
+
+.addfile {
     display: flex;
     justify-content: space-between;
     margin: 5px;
     align-items: center;
-    border-bottom: 1px solid #9d9d9d;
+    border-bottom: 1px solid var(--bo-60);
     padding: 5px;
+}
+
+#file-info {
+    display: flex;
+    justify-content: space-between;
+    margin: 4px;
+    align-items: center;
+    border-bottom: 1px solid var(--bo-40);
+    padding: 4px;
 }
 
 .addfile > span {
     margin-left: 10px;
+    padding: 5px 0 5px 0;
 }
 
 #file-info > span {
@@ -316,18 +326,28 @@
 }
 
 .checked span {
-    margin-left: 10px;
+    margin-left: 5px;
+}
+
+#controller {
+    display: flex;
+    align-content: center;
 }
 #controller span {
     color: #7d7d7d;
     cursor: pointer;
+    font-size: 20px;
 }
 
-#controller span:first-child:hover {
-    color: var(--main-color);
+#controller span:nth-child(2) {
+    margin: 0 5px;
 }
 
 #controller span:nth-child(2):hover {
+    color: var(--main-color);
+}
+
+#controller span:nth-child(3):hover {
     color: #ff0000;
 }
 
