--- a/sixman/src/main/webapp/resources/css/chattingRoom.css
+++ b/sixman/src/main/webapp/resources/css/chattingRoom.css
@@ -17,8 +17,19 @@
 	
 }
 
-.1st-box{
+.first-box{
 	width:100%;
-	height:20%
+	height:20%;
 	background-color: #000000;
+	border: 2px solid #000000;
+}
+
+.second-box{
+	width:100%;
+	height:60%;
+	background-color: #000000;
+}
+
+.third-box{
+	
 }
