--- a/sixman/src/main/webapp/resources/css/attendance/attendanceBoard.css
+++ b/sixman/src/main/webapp/resources/css/attendance/attendanceBoard.css
@@ -125,6 +125,11 @@
     font-size: 1.5em;
     font-weight: 500;
 }
+#select-week{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 #information-header{
     display: flex;
     justify-content: center;
@@ -135,7 +140,7 @@
 #work-time, #work-time2{
     display: flex;
     align-items: center;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 530;
 }
 #restinfo1, #restinfo2, #restinfo3,#restinfo4,#restinfo5{
