--- a/sixman/src/main/webapp/resources/css/addressBook/receive.css
+++ b/sixman/src/main/webapp/resources/css/addressBook/receive.css
@@ -1,3 +1,7 @@
+.material-symbols-outlined {
+    font-variation-settings: 'FILL' 1, 'wght' 700, 'GRAD' 0, 'opsz' 48;
+}
+
 .main-box-2 {
     display: flex;
     width: 100%;
