--- a/sixman/src/main/webapp/resources/css/messenger.css
+++ b/sixman/src/main/webapp/resources/css/messenger.css
@@ -1,18 +1,20 @@
 @charset "UTF-8";
 
 .messenger-whole{
-	width:30%;
+	width:25%;
 	height:80%;
-	
+	display:none;
 	position:absolute;
 	z-index:100;
 	right:0;
 	top:6%;
 	border: 2px solid black;
 	background-color: white;
-	box-sizing:border-box;
+ 	box-sizing:border-box; 
 	margin:0px;
 	float:right;
+	
+	overflow-y:scroll;
 }
 
 .title-box{
@@ -65,6 +67,8 @@
 
 #who-chat{
 	margin-right:8%;
+	margin:10%;
+	margin-bottom:2%;
 }
 
 .btn{
@@ -136,11 +140,16 @@
 	margin-top:10%;
 }
 
+.whochat-page-first{
+	
+}
+
 .text-messenger-settings{
 	margin:8%;
 	background-color: white;
 	z-index:20;
 	box-shadow: 0px 0px 2px 2px grey;
+/* 	overflow-y:scroll; */
 }
 
 .team-people-data::-webkit-scrollbar{
@@ -202,3 +211,77 @@
 
 .checkbox-square input[type="checkbox"]{display : none}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.chatroom-list-box{
+	
+	margin:8%;
+	position:absolute;
+	width:80%;
+	height:28%;
+	box-shadow: 0px 0px 2px 2px grey;
+}
+
+.with-chat-data01{
+}
+
+.chatroom-introduce{
+	font-size:28px;
+	margin:10%;
+	margin-bottom:6%;
+}
+
+.square-one{
+	width:60px;
+	height:60px;
+	position:absolute;
+	background-color: #0E6D62; 
+	border:2px solid #0E6D62;
+	border-radius: 100%;
+	margin-left:2%;
+	margin-top:4%;
+}
+
+.chatroom-list-one{
+	display : flex;
+}
+
+.with-chat-roomname{
+	font-size:26px;
+	margin:6%;
+	margin-left:28%;
+}
+
+.with-chat-subroomname{
+	margin:6%;
+	font-size:28px;
+}
+
+.with-chat-subroomname2{
+	margin:8%;
+	font-size:18px;;
+}
+
+.chatroom-list-two-to-two{
+	margin-left:28%;
+	margin-right:40%;
+	display: flex;
+}
