카페에서 참여자 선택 성공

--- a/sixman/src/main/webapp/resources/css/project/create.css
+++ b/sixman/src/main/webapp/resources/css/project/create.css
@@ -219,11 +219,11 @@ input[name='prjDate2'] {
 .side-box{
     display: flex;
     width: 30%;
-    height: 99%;
+    height: 100%;
+    align-items: flex-end;
 }
 
 .calendar {
-    margin-top: 403px;
     width: 100%;
 }
 
