메일 리스트 불러오기 작성 중

--- a/sixman/src/main/webapp/resources/css/mail/mailList.css
+++ b/sixman/src/main/webapp/resources/css/mail/mailList.css
@@ -136,3 +136,31 @@ input[type=checkbox]{
 .click-able{
     color: var(--bo-80);
 }
+
+#title-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+#category-list{
+    display: flex;
+    gap: 10px;
+    margin-right: 40px;
+}
+
+.category-item{
+    height: 30px;
+    padding: 8px;
+    border: 1px solid var(--main-color);
+    border-radius: 15px;
+    color: var(--main-color);
+    font-size: 0.8em;
+    cursor: pointer;
+}
+
+.category-item:hover,
+.category-item.cate-checked{
+    background-color: var(--main-color);
+    color: white;
+}
