--- a/sixman/src/main/webapp/resources/css/document/documentwrite.css
+++ b/sixman/src/main/webapp/resources/css/document/documentwrite.css
@@ -75,6 +75,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding-top: 20px;
 }
 
 #header-title{
@@ -184,4 +185,13 @@ button.btn:hover{
     background: none;
     border: 1px solid var(--main-color);
 }
+#btn-box{
+    display: flex;
+    width: 100%;
+    gap: 10px;
+    justify-content: flex-end;
+}
 
+#btn-box > *{
+    width: 100px;
+}
