--- a/sixman/src/main/webapp/resources/css/messenger.css
+++ b/sixman/src/main/webapp/resources/css/messenger.css
@@ -59,9 +59,20 @@
 	color : var(--main-color);
 	font-size:40px;
 	margin-top:8%;
-	margin-left:35%;
+	margin-left:80%;
 	background-color: white;
 	border: 1px solid white;
+	position:absolute;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48;
+  margin-left:2%;
 }
 
 .bottom-area{
@@ -238,11 +249,12 @@
 
 .bottom-area2{
 
-	width:88%;
+	width:100%;
 	height:6%;
-	border:2% solid #0E6D62;
+	border:1px solid #0E6D62;
 	background-color: #0E6D62;
-	margin:4%;
+	margin-top:4%;
+	margin-bottom:4%;
 }
 
 .textbox-messenger-area1{
@@ -257,17 +269,32 @@
 
 }
 
-/* .textbox-messenger-area3{} */
-
-
-
-.showup>#subtitle1{
-	font-size:20px;
-	margin:8px;
+.showup{
+	display:flex;
 }
 
+/* .textbox-messenger-area3{} */
+
+#chatsetting-slide01{
+	margin-top: 10%;
+}
+
+.chatsetting-02-subtitle{
+	margin-top:16%;
+	font-size:20px;
+}
+
+.team-whole-data{
+	display:flex;
+	font-size: 100%;
+	margin-top:10%;
+	margin-bottom:6%;
+}
+
+
+
 .team-name{
-	margin-left:40%;
+	margin-left:70%;
 	margin-right:10%;
 	margin-top:4%;
 	font-size:100%;
@@ -281,8 +308,9 @@
 	font-style: bold;
 	position:absolute;
 }
+
 .with-chat-name{
-	margin-top:10%;
+	margin-top:6%;
 	width:25%;
 	margin-left:40%;
 }
@@ -290,7 +318,7 @@
 
 .with-chat-grade{
 	margin-right:10%;
-	margin-top:10%;
+	margin-top:6%;
 	width:25%;
 	margin-left:auto;
 }
@@ -309,11 +337,7 @@
 }
 
 
-.team-whole-data{
-	display:flex;
-	font-size: 100%;
-	margin-top:10%;
-}
+
 
 .whochat-page-first{
 	
@@ -330,14 +354,6 @@
 /* 	background-color: gray; */
 /* } */
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48;
-  margin-left:2%;
-}
 
 
 
@@ -361,7 +377,30 @@
 .chatting-button-list01{
 	display:flex;
 	justify-content: space-around;
+	margin-bottom:10%;
 }
+
+.with-chat-data>.checkbox-square-one{
+	width:48px;
+	height:48px;
+	margin-right:16%;
+	}
+
+.white_display_01{
+	width:100%;
+	height:20%;
+	background-color: white;
+	margin-bottom:10%;
+}
+
+
+.chatbutton01{
+	margin-top:6%;
+	margin-bottom:16%;
+	cursor: pointer;
+}
+
+
 
 /* 채팅방 이름 생성 */
 .who-chat-roomname{
@@ -373,16 +412,53 @@
 	margin-left:10%;
 	width:80%;
 	font-size:28px;
+	position:absolute;
 }
 
 .btn-height{
-	margin:10%;
-	margin-left:64%;
+	margin-left:20%;
+	margin-right:20%;
+	display:flex;
+	justify-content: space-between;
+	align-items:flex-end;
+	margin-top:28%;
 }
 
-.chatbutton01{
-	margin-bottom:10%;
+
+
+#makingroom-second-leave{
+	margin-top:20%;
 }
+
+.btn-height>#makingroom-second-go{
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* 채팅방 화면 */
@@ -390,43 +466,65 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .chatting-room{
-	background-color: black;
+	background-color: gray;
+	width:100%;
+	height:100%;
+	
 }
 
 .chatting-room-first{
 	width:100%;
-	height:10%;
-	backgrond-color:#A1DBDB;
+	height:8%;
+	background-color:#A1DBDB;
+	margin-top:0%;
+	
 }
 
+.chatroom-square{
+	width:48px;
+	height:48px;
+	position:absolute;
+	background-color: white;
+	border-radius: 100%;
+	margin:1%;
+}
+
+.chatroom-box1-1-profile-data{
+	margin-left:16%;
+	position: absolute;
+	margin-top: 4%;
+}
+
+.chatroom-one-to-one{
+	display:flex;
+}
+
+.chatroom1-1-2text{
+	display:flex;
+}
+
+#chatroom-1-2-icon{
+	font-size:60px;
+	margin-left:68%;
+	cursor: pointer;
+}
+
+#chatroom-1-3-icon{
+	font-size:40px;
+	margin-left:0%;
+	margin-top:2%;
+	cursor: pointer;
+}
+/* 82+4 */
+.chatroom-one-to-two{
+	height:86%;
+	width:100%;
+	background-color: white;
+}
+
+.chatroom-one-to-three{
+	display:flex;
+	height:6%;
+	background-color: #dcfefc;
+}
