--- a/sixman/src/main/webapp/resources/css/project/detail.css
+++ b/sixman/src/main/webapp/resources/css/project/detail.css
@@ -30,7 +30,7 @@
 }
 
 
-/* 프로젝트 상태 */
+/* 상태 */
 
 .status {
     margin: 10px;
@@ -39,6 +39,7 @@
 }
 
 .status-1 {
+    display: flex;
     font-size: 17px;
 }
 
@@ -46,10 +47,12 @@
     display: flex;
     justify-content: space-between;
     width: 20%;
-    margin-top: 8px;
-    margin-left: 10px;
+    margin-left: 25px;
+    text-align: center;
+    vertical-align: middle;
 }
 
+/* 버튼 toggle 상태 */
 .ing {
     background-color: #62C276;
     color: #FFFFFF;
@@ -89,10 +92,13 @@
     font-size: 17px;
 }
 
+.member-1 {
+    display: flex;
+}
+
 .member-list {
     display: flex;
-    margin-top: 8px;
-    margin-left: 10px;
+    margin-left: 25px;
     width: 20%;
     justify-content: space-between;
 }
@@ -106,13 +112,16 @@
     font-size: 17px;
 }
 
+.prjdate {
+    display: flex;
+}
+
 .date > p {
     margin: 8px 0 10px 10px;
 }
 
 #startdate,
 #enddate {
-    margin-top: 8px;
     margin-left: 10px;
     height: 15%;
 }
@@ -125,6 +134,14 @@
     margin: 10px;
     color: #aaa;
     font-size: 17px;
+}
+
+.clear {
+    display: flex;
+}
+
+.statusinput {
+    display: flex;
 }
 
 .progress {
@@ -161,13 +178,22 @@
     width: 50%;
 }
 
-.valueinput,
-.maxinput {
+.valueinput {
     margin-top: 8px;
     margin-left: 10px;
     width: 45px;
     height: 25px;
+    outline: none;
+    border: 1px solid #aaa;
+    border-radius: 5px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .max {
     margin-top: 8px;
     margin-left: 10px;
@@ -198,6 +224,10 @@
     margin: 10px;
     color: #aaa;
     font-size: 17px;
+}
+
+.todo-plus {
+    display: flex;
 }
 
 .todo > span {
@@ -247,4 +277,5 @@
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
-  
+
+ 
