--- a/sixman/src/main/webapp/resources/css/document/documentModal.css
+++ b/sixman/src/main/webapp/resources/css/document/documentModal.css
@@ -1,10 +1,16 @@
-.approve-modal close{
+.approve-modal {
     display: none;
 }
 
+.modaltop{
+
+}
 .savetop{
+
+   
+    
     display: flex;
-    width: 40%;
+    width: 40.1%;
     position: absolute;
     border: 1px solid var(--bo-40);
     align-items: center;
@@ -14,12 +20,13 @@
     height: 30px;
     font-size: 1.2em;
     padding-left: 10px;
-    top: 225px;
+    top: 238px;
+    left: 575px;
     
 }
 
 
-.approve-modal{
+.approve-modal {
     position: absolute;
     top: 0;
     left: 0;
@@ -31,6 +38,7 @@
     justify-content: center;
     align-items: center;
 }
+
 
 .approve-modal form{
     width: 40%;
