--- a/sixman/src/main/webapp/resources/css/document/documentModalMy.css
+++ b/sixman/src/main/webapp/resources/css/document/documentModalMy.css
@@ -2,9 +2,9 @@
     display: none;
 }
 
-.savetop{
+.svtt{
     display: flex;
-    width: 40%;
+    width: 40.1%;
     position: absolute;
     border: 1px solid var(--bo-40);
     align-items: center;
@@ -13,8 +13,8 @@
     background-color: var(--main-color);
     height: 30px;
     font-size: 1.2em;
-    padding-left: 10px;
-    top: 225px;
+    padding-left: 9px;
+    top: 237px;
     
 }
 
@@ -75,3 +75,67 @@
 .docusave input[type='submit']:hover{
     background-color: #17a897;
 }
+
+.savebutton{
+    display: flex;
+    width: 100%;
+    gap: 10px;
+    justify-content: flex-end;
+    padding-right: 45px;
+    padding-top: 10px;
+    top: 100px;
+}
+.btn{
+    width: 100px;
+    border: 1px solid var(--bo-40);
+}
+
+
+.savelistbox{
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 25px 45px;
+    height: 70%;
+    border-bottom: 2px solid #ddd;
+}
+.listtitle{
+    display: grid;
+    position: relative;
+    grid-template-columns:  1.5fr 1fr 10fr 1fr 1fr 1fr; 
+    border-bottom: 1px solid var(--bo-40);
+    align-items: center;
+    height: 50px;
+    
+    
+}
+.listtitle p:nth-of-type(1){
+    padding-left: 20px;
+}
+
+.listtitle input{
+    position: absolute;
+    
+}
+.listtitle p:nth-of-type(3){
+    text-align: center;
+}
+
+
+.first{
+    color: black;
+    background-color: rgb(214, 214, 214);
+    height: 30px;
+    font-size: 1.2em;
+  
+    border-left: 1px solid var(--bo-40);
+    border-right: 1px solid var(--bo-40);
+}
+
+
+.first :nth-of-type(2){
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+}
+
