메일 리스트 불러오기 완료 일괄 변경 부분 작업 (삭제, 이동 등)

--- a/sixman/src/main/webapp/resources/css/list.css
+++ b/sixman/src/main/webapp/resources/css/list.css
@@ -71,6 +71,10 @@
     align-self: center;
 }
 
+#list-item-box{
+    height: 100%;
+}
+
 .list-item{
     display: grid;
     grid-template-columns: 1fr 8fr 1.5fr 1fr ;
